# ipcvar

./: README.md  ipcvar.cabal
Data/: IPCVar.hs
Data/IPCVar/: Backend.hs  File.hs  Shm.hs
test/: main.hs
