Name:                ipcvar
Version:             0.0.1
Synopsis:            Simple inter-process communication through IPCVars.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  @ipcvar@ is ...
  .
  For further information...

Source-repository head
  type: git
  location: git://github.com/jwiegley/ipcvar.git

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
        base                 >= 3 && < 5
      , binary               >= 0.5.1.1
      , bytestring           >= 0.9.2.1
      , unix                 >= 2.5.1.1
      , directory            >= 1.2.0.1
    exposed-modules:
        Data.IPCVar
        Data.IPCVar.Backend
        Data.IPCVar.File
    default-extensions: 
        OverloadedStrings

test-suite test
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -threaded
    build-depends:
        base
      , ipcvar
      , unix                 >= 2.5.1.1
      , hspec                >= 1.4
